--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>riemann.java.client-dropwizard</groupId>
     <artifactId>riemann.java.client-dropwizard</artifactId>
     <packaging>jar</packaging>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <name>riemann.java.client-dopwizard</name>
     <description>Dropwizard integration with riemann java client</description>
 
